# tinistream

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  fly.toml
.github/workflows/: api.yml  fly-deploy.yml  generate-rust-client.yml  release.yml  rust-client.yml
.zed/: debug.json
api/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml
api-new/: .env.example  .gitignore  Cargo.toml  Dockerfile  config.toml
api-new/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
api-new/src/api/: client.rs  health.rs  hello.rs  info.rs  ingest.rs  mod.rs  stream.rs
api-new/src/auth/: client_token.rs  crypto.rs  error.rs  mod.rs
api-new/src/extractors/: api_key.rs  client_token.rs  json_stream.rs  last_event_id.rs  mod.rs  query.rs  redis_client.rs
api-new/src/plugins/: logging.rs  mod.rs  redis.rs  security.rs
api-new/src/redis/: client.rs  constants.rs  error.rs  exclusive_client.rs  exclusive_pool.rs  mod.rs  reader.rs  stream.rs  types.rs  util.rs  writer.rs
api-new/src/routes/: mod.rs
api-new/tests/: rust_client.rs
api-new/tests/common/: mod.rs
api/src/: config.rs  cors.rs  crypto.rs  error.rs  errors.rs  lib.rs  main.rs  openapi.rs  redis.rs  state.rs
api/src/api/: client.rs  event.rs  health.rs  info.rs  ingest.rs  mod.rs  stream.rs
api/src/auth/: api_key.rs  client_token.rs  crypto.rs  errors.rs  mod.rs
api/src/auth/crypto/: token.rs  webhook.rs
api/src/data/: json_stream.rs  mod.rs  ws_stream.rs
api/src/extractors/: client_token.rs  json.rs  mod.rs  redis_client.rs
api/src/plugins/: crypto.rs  logging.rs  mod.rs  redis.rs  security.rs
api/src/redis/: client.rs  constants.rs  exclusive_client.rs  mod.rs  reader.rs  scripts.rs  stream.rs  util.rs  writer.rs
api/tests/: rust_client.rs  stream_mutations.rs
api/tests/common/: mod.rs
clients/: README.md
clients/python/: README.md  config.yml  pyproject.toml
clients/python/templates/: README.md.jinja  client.py.jinja
clients/python/tinistream_client/: __init__.py  client.py  test.py
clients/python/tinistream_client/api/events/: add_events.py  add_events_json_stream.py
clients/python/tinistream_client/api/info/: get_info.py  health.py
clients/python/tinistream_client/api/stream/: cancel_stream.py  create_stream.py  create_token.py  end_stream.py  get_stream_events.py  get_stream_info.py  list_streams.py
clients/python/tinistream_client/models/: __init__.py  add_event.py  add_events_request.py  add_events_response.py  add_events_stream_response.py  end_stream_response.py  error_message.py  info_response.py  redis_stats.py  stream_access_response.py  stream_event.py  stream_info.py  stream_request.py  stream_status.py
clients/rust/: Cargo.toml  README.md
clients/rust/src/: lib.rs
spec/: openapi.json
src/: config.rs  crypto.rs  errors.rs  lib.rs  main.rs  redis.rs
src/api/: client.rs  stream.rs
src/auth/: api_key.rs  client_token.rs
src/redis/: client.rs  last_event_id.rs  reader.rs  util.rs
