[package]
name = "tinistream-api"
version = "0.1.0"
edition = "2024"
description = "A lightweight streaming broker"

[dependencies]
anyhow = "1.0.103"
axum = { version = "0.8.9", features = ["json", "query"] }
axum-helmet = "1.0.2"
axum-plugin = {
  git = "https://git.fasharp.io/fa-sharp/axum-plugin",
  rev = "ba284fcb6e",
  features = ["figment"]
}
dotenvy = "0.15.7"
figment = { version = "0.10.19", features = ["env"] }
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
subtle = { version = "2.6.1", default-features = false, features = ["std"] }
tokio = {
  version = "1.52.3",
  default-features = false,
  features = ["macros", "net", "rt", "rt-multi-thread", "signal"]
}
tower = { version = "0.5", default-features = false }
tower-http = {
  version = "0.7.0",
  features = [
    "cors",
    "limit",
    "request-id",
    "timeout",
    "trace",
  ]
}
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
