[package]
name = "tinistream-api"
version = "0.1.0"
edition = "2024"
description = "Backend for tinistream, a lightweight streaming broker"

[dependencies]
anyhow = "1.0.103"
async-stream = "0.3.6"
axum = { version = "0.8.9", features = ["json", "query", "ws"] }
axum-helmet = "1.0.2"
axum-plugin = {
  git = "https://git.fasharp.io/fa-sharp/axum-plugin",
  rev = "be17dc9aec",
  features = ["figment"]
}
base64 = "0.22.1"
bytes-utils = { version = "0.1", features = ["serde"] }
chacha20poly1305 = { version = "0.11.0", features = ["zeroize"] }
deadpool = { version = "0.13.0", features = ["rt_tokio_1"] }
dotenvy = "0.15.7"
figment = { version = "0.10.19", features = ["env"] }
fred = {
  version = "10.1.0",
  default-features = false,
  features = ["i-hashes", "i-keys", "i-streams", "transactions"]
}
futures = "0.3.32"
hex = "0.4.3"
itertools = "0.15.0"
schemars = { version = "1.2.1" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
subtle = { version = "2.6.1", default-features = false, features = ["std"] }
thiserror = "2.0.18"
time = "0.3.53"
tokio = {
  version = "1.52.3",
  default-features = false,
  features = ["macros", "net", "rt", "rt-multi-thread", "signal"]
}
tokio-stream = {version = "0.1.18" }
tokio-util = { version = "0.7.18", features = ["io"] }
tower = { version = "0.5", default-features = false }
tower-http = {
  version = "0.7.0",
  features = ["cors", "limit", "request-id", "trace"]
}
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
urlencoding = "2.1"
