[package]
name = "tinistream-api"
version = "0.1.0"
edition = "2024"
description = "Backend for tinistream, a lightweight streaming broker"

[dependencies]
aide = {
  version = "0.16.0-alpha.4",
  features = ["axum", "axum-json", "axum-query", "axum-ws", "macros", "swagger"]
}
anyhow = "1.0.103"
async-stream = "0.3.6"
axum = { version = "0.8.9", features = ["json", "query", "ws"] }
axum-aide-macros = {
  git = "https://git.fasharp.io/fa-sharp/axum-aide-macros",
  rev = "5b00e645df",
}
axum-helmet = "1.0.2"
axum-plugin = {
  git = "https://git.fasharp.io/fa-sharp/axum-plugin",
  rev = "be17dc9aec",
  features = ["figment"]
}
base64 = "0.22.1"
bytes-utils = { version = "0.1", features = ["serde"] }
chacha20poly1305 = { version = "0.11.0", features = ["zeroize"] }
dotenvy = "0.15.7"
fred = {
  version = "10.1.0",
  default-features = false,
  features = [
    "i-client",
    "i-hashes",
    "i-keys",
    "i-scripts",
    "i-streams",
    "transactions"
  ]
}
futures = "0.3.32"
hex = "0.4.3"
itertools = "0.15.0"
itoa = "1.0.18"
schemars = { version = "1.2.1" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
subtle = { version = "2.6.1", default-features = false, features = ["std"] }
thiserror = "2.0.18"
time = "0.3.53"
tokio = {
  version = "1.52.3",
  default-features = false,
  features = ["macros", "net", "rt", "rt-multi-thread", "signal"]
}
tokio-stream = "0.1.18"
tokio-util = { version = "0.7.18", features = ["io"] }
tower = { version = "0.5", default-features = false }
tower-http = {
  version = "0.7.0",
  features = ["cors", "limit", "request-id", "trace"]
}
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
urlencoding = "2.1"

[dev-dependencies]
axum-test = "21.0.0"
rand = "0.10.2"
reqwest = { version = "0.13.4", default-features = false }
tinistream-client = { path = "../clients/rust/" }
