[package]
name = "tinistreamer"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aes-gcm = "0.10"
base64 = "0.22"
deadpool = { version = "0.12.3", features = ["rt_tokio_1"] }
dotenvy = "0.15.7"
fred = { version = "10.1", default-features = false, features = [
  "i-keys",
  "i-streams",
  "transactions",
] }
hex = "0.4.3"
itertools = "0.14.0"
rocket = { version = "0.5.1", features = ["json", "secrets"] }
rocket_okapi = { version = "0.9.0", features = [
  "rapidoc",
] }
schemars = "0.8.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
time = "0.3"
tokio = { version = "1.45", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
urlencoding = "2.1"

[dev-dependencies]
reqwest = { version = "0.12" }
tinistreamer-client = { path = "../clients/rust" }
