[package]
name = "tinistream"
version = "0.1.3"
edition = "2021"
publish = false

[dependencies]
aes-gcm = "0.10"
base64 = "0.22"
bytes = { version = "1" }
bytes-utils = { version = "0.1", features = ["serde"] }
deadpool = { version = "0.12.3", features = ["rt_tokio_1"] }
dotenvy = "0.15.7"
fred = { version = "10.1", default-features = false, features = [
  "i-hashes",
  "i-keys",
  "i-streams",
  "transactions",
] }
hex = "0.4.3"
itertools = "0.14.0"
rocket = { version = "0.5.1", features = ["json", "secrets"] }
rocket_okapi = { version = "0.9.0", features = ["rapidoc", "rocket_ws"] }
rocket_ws = { version = "0.1.1" }
schemars = { version = "0.8.22" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
time = "0.3"
tokio = { version = "1.45", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.16", features = ["io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
urlencoding = "2.1"

[dev-dependencies]
eventsource-stream = "0.2.3"
rand = "0.8"
reqwest = { version = "0.12" }
reqwest-websocket = "0.5.1"
tinistream-client = { path = "../clients/rust" }
