[package]
name = "tinistreamer-client"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
bytes = "1.9"
futures-core = "0.3"
progenitor-client = "0.11.1"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "stream",
] }
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7"
