[package]
name = "tinistream-client"
version = "0.1.10"
edition = "2021"
license = "MIT"

[dependencies]
bytes = "1.9"
futures-core = "0.3"
progenitor-client = "0.12.0"
reqwest = { version = "0.13", default-features=false, features = ["json", "query", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7"

